--- a/facebook.com.html
+++ b/facebook.com.html
@@ -15,26 +15,31 @@
         <h1 id="tituloface"><img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="nome Facebook"></h1>
         <p class="sub">O Facebook ajuda você a se conectar e compaartilhar com as pessoas que fazem parte da sua vida.</p>
         <div class="fundomain">
-            <div class="gmail">
+            <div class="senhag">
+                <div class="gmail">
 
-            </div>
-            <div class="senha">
+                </div>
+                <div class="senha">
 
+                </div>
             </div>
             <div class="botaoentrar">
                 Entrar
             </div>
-            <div>
+            <div class="senhaes">
                 <p>Esqueceu a senha?</p>
             </div>
-            <hr>
+            <div>
+                <img src="Captura de tela 2022-05-07 215449.png" alt="bla">
+            </div>
             <div class="botaocriar">
                 <h1>Criar nova conta</h1>
             </div>
         </div>
     </div>
+    <p>Criar uma Página para uma celebridade, uma marca ou uma empresa.</p>
         <footer>
-
+            <img src="Captura de tela 2022-05-07 215737.png" alt="">
         </footer>
 </body>
 </html>
